<resources>
    <string name="app_name">task4</string>
    <string name="send">Отправить</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="subject">Предмет</string>
    <string name="input_info">Ввести информацию</string>
    <string name="date">Дата</string>
    <string name="accept">Принять</string>
    <string name="time">Время</string>
    <string name="comments">Комментарии</string>
</resources>